--- a/src/application/docker/broker/mosquitto.conf
+++ b/src/application/docker/broker/mosquitto.conf
@@ -1,4 +1,5 @@
-port 8000
+listener 8000
+listener 8100
 allow_anonymous true
 persistence true
 persistence_location /mosquitto/data/
@@ -6,11 +7,11 @@ log_dest file /mosquitto/log/mosquitto.log
 log_type all
 topic messagesSend{
 
-allow = all
+allow all
 
 }
 topic messagesReceive{
 
-allow = all
+allow all
 
 }
