--- a/src/application/docker/broker/mosquitto.conf
+++ b/src/application/docker/broker/mosquitto.conf
@@ -1,10 +1,16 @@
 listener 8000
-listener 8100
-allow_anonymous true
+protocol mqtt
+
+connection noIp
+address postsystem.ddns.net:8000
+
 persistence true
 persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
 log_type all
+
+allow_anonymous true
+
 topic messagesSend{
 
 allow all
