--- a/src/application/docker/broker/mosquitto.conf
+++ b/src/application/docker/broker/mosquitto.conf
@@ -11,13 +11,4 @@ log_type all
 
 allow_anonymous true
 
-topic messagesSend{
-
-allow all
-
-}
-topic messagesReceive{
-
-allow all
-
-}
+topic messagesSend in
