--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>MI-ConcorrenciaConectividade-Problema-2</groupId>
 	<artifactId>MI-ConcorrenciaConectividade-Problema-2</artifactId>
@@ -104,12 +102,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>
-				org.springframework</groupId>
-			<artifactId>spring-webflux</artifactId>
-			<version>
-				${spring.version}
-			</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>2.6.3</version>
 		</dependency>
 	</dependencies>
 	<properties>
