--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>okhttp</artifactId>
 			<version>4.9.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20230227</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<spring.version>5.3.9</spring.version>
