--- a/src/application/docker/broker/global/mosquitto.conf
+++ b/src/application/docker/broker/global/mosquitto.conf
@@ -1,4 +1,4 @@
-listener 8100
+listener 8200
 protocol mqtt
 
 persistence true
@@ -7,3 +7,4 @@ log_dest file /mosquitto/log/mosquitto.log
 log_type all
 
 allow_anonymous true
+topic global/messages in mosquitto/relay/+/bestStation out
