--- a/src/application/docker/broker/docker-compose.yml
+++ b/src/application/docker/broker/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
-  mosquitto-global:
+  mosquitto:
     image: eclipse-mosquitto
     ports:
-      - "8200:8200"
+      - "8100:8100"
     volumes:
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
       - ./mosquitto_data:/mosquitto/data
