--- a/src/application/docker/broker/global/mosquitto.conf
+++ b/src/application/docker/broker/global/mosquitto.conf
@@ -8,6 +8,6 @@ log_type all
 
 allow_anonymous true
 
-connection mylocalbroker
-address mybroker.local:8100
-start_type automatic
+connection local-broker-norte
+address 127.0.0.1:8100
+topic cloud/# in global out
