--- a/src/application/docker/broker/local/mosquitto.conf
+++ b/src/application/docker/broker/local/mosquitto.conf
@@ -7,3 +7,7 @@ log_dest file /mosquitto/log/mosquitto.log
 log_type all
 
 allow_anonymous true
+
+connection local
+address 127.0.0.1:8200
+topic fog/# in cloud/# out
