--- a/src/application/docker/broker/local/mosquitto.conf
+++ b/src/application/docker/broker/local/mosquitto.conf
@@ -8,6 +8,6 @@ log_type all
 
 allow_anonymous true
 
-connection local
+connection global
 address 127.0.0.1:8200
-topic fog/# in cloud/# out
+topic fog/# cloud/# 
