--- a/src/application/docker/broker/global/mosquitto.conf
+++ b/src/application/docker/broker/global/mosquitto.conf
@@ -10,4 +10,4 @@ allow_anonymous true
 
 connection local-broker-norte
 address 127.0.0.1:8100
-topic cloud/# in cloud/# out
+topic cloud/# cloud/# out
