--- a/src/application/docker/fog/docker-compose.yml
+++ b/src/application/docker/fog/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       tty: true
       stdin_open: true
       container_name: fog-app
+      volumes:
+         - ./spring.properties:/app/spring.properties
       ports:
          - "8000:8000/tcp"
       network_mode: "host"
