--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<start-class>application.fog.FogApp</start-class>
+					<mainClass>${FogApp}</mainClass>
+					<outputDirectory>${basedir}/src/application/docker/fog</outputDirectory>
+					<finalName>Fog</finalName>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.0.0</version>
