--- a/src/application/docker/fog/Dockerfile
+++ b/src/application/docker/fog/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:latest
 WORKDIR /fog
-COPY Fog-jar-with-dependencies.jar /fog
+COPY Fog.jar /fog
 EXPOSE 8000
-CMD ["java", "-jar" , "Fog-jar-with-dependencies.jar"]
+CMD ["java", "-jar" , "Fog.jar"]
 
