--- a/src/application/docker/cloud/Dockerfile
+++ b/src/application/docker/cloud/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:latest
 WORKDIR /cloud
-COPY Cloud-jar-with-dependencies.jar /cloud
+COPY Cloud.jar /cloud
 CMD ["java", "-jar" , "Cloud-jar-with-dependencies.jar"]
 
