--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>MI-ConcorrenciaConectividade-Problema-2</groupId>
 	<artifactId>MI-ConcorrenciaConectividade-Problema-2</artifactId>
@@ -29,6 +31,13 @@
 						</configuration>
 						<goals>
 							<goal>repackage</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>purge-local-repository</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>purge-local-repository</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -68,6 +77,13 @@
 								${basedir}/src/application/docker/car</outputDirectory>
 							<finalName>Car</finalName>
 						</configuration>
+					</execution>
+					<execution>
+						<id>purge-local-repository</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>purge-local-repository</goal>
+						</goals>
 					</execution>
 					<execution>
 						<id>cloud</id>
