--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>MI-ConcorrenciaConectividade-Problema-2</groupId>
 	<artifactId>MI-ConcorrenciaConectividade-Problema-2</artifactId>
@@ -33,13 +31,6 @@
 							<goal>repackage</goal>
 						</goals>
 					</execution>
-					<execution>
-						<id>purge-local-repository</id>
-						<phase>clean</phase>
-						<goals>
-							<goal>purge-local-repository</goal>
-						</goals>
-					</execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -58,6 +49,13 @@
 					<target>11</target>
 				</configuration>
 				<executions>
+					<execution>
+						<id>purge-local-repository-1</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>purge-local-repository</goal>
+						</goals>
+					</execution>
 					<execution>
 						<id>car</id>
 						<phase>package</phase>
@@ -79,7 +77,7 @@
 						</configuration>
 					</execution>
 					<execution>
-						<id>purge-local-repository</id>
+						<id>purge-local-repository-2</id>
 						<phase>clean</phase>
 						<goals>
 							<goal>purge-local-repository</goal>
@@ -104,6 +102,13 @@
 								${basedir}/src/application/docker/cloud</outputDirectory>
 							<finalName>Cloud</finalName>
 						</configuration>
+					</execution>
+					<execution>
+						<id>purge-local-repository-3</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>purge-local-repository</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
