--- a/src/application/docker/broker/local/mosquitto.conf
+++ b/src/application/docker/broker/local/mosquitto.conf
@@ -9,5 +9,5 @@ log_type all
 allow_anonymous true
 
 connection global
-address 127.0.0.1:8200
-topic fog/# in
+address 192.168.0.151:8200
+topic fog/# out 2
