--- a/src/application/docker/broker/global/docker-compose.yml
+++ b/src/application/docker/broker/global/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3'
 services:
   mosquitto-global:
     image: eclipse-mosquitto
+    network_mode: bridge
+    expose:
+       - "8200"
     ports:
       - "8200:8200"
     volumes:
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
       - ./mosquitto_data:/mosquitto/data
       - ./mosquitto_log:/mosquitto/log
-
-
 
