--- a/src/application/docker/broker/local/docker-compose.yml
+++ b/src/application/docker/broker/local/docker-compose.yml
@@ -2,12 +2,16 @@ version: '3'
 services:
   mosquitto-local:
     image: eclipse-mosquitto
+    network_mode: bridge
+    expose:
+      - "8100"
     ports:
       - "8100:8100"
     volumes:
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
       - ./mosquitto_data:/mosquitto/data
       - ./mosquitto_log:/mosquitto/log
+     
 
 
 
