--- a/src/application/docker/broker/global/mosquitto.conf
+++ b/src/application/docker/broker/global/mosquitto.conf
@@ -9,5 +9,6 @@ log_type all
 allow_anonymous true
 
 connection local
-address 192.168.0.151:8100
-topic cloud/# in 2
+address 192.168.56.1:8100
+topic fog/# in 2
+topic cloud/# out 2
