--- a/src/application/docker/broker/local/mosquitto.conf
+++ b/src/application/docker/broker/local/mosquitto.conf
@@ -9,5 +9,6 @@ log_type all
 allow_anonymous true
 
 connection global
-address 192.168.0.151:8200
+address 192.168.56.1:8200
 topic fog/# out 2
+topic cloud/# in 2
