versao semi estavel

--- a/src/application/docker/broker/global/mosquitto.conf
+++ b/src/application/docker/broker/global/mosquitto.conf
@@ -8,7 +8,22 @@ log_type all
 
 allow_anonymous true
 
-connection local
-address 192.168.56.1:8100
+connection local-1
+address 172.16.103.4:8100
+topic fog/# in 2
+topic cloud/# out 2
+
+connection local-2
+address 172.16.103.5:8100
+topic fog/# in 2
+topic cloud/# out 2
+
+connection local-3
+address 172.16.103.6:8100
+topic fog/# in 2
+topic cloud/# out 2
+
+connection local-4
+address 172.16.103.7:8100
 topic fog/# in 2
 topic cloud/# out 2
