--- a/src/application/docker/broker/global/docker-compose.yml
+++ b/src/application/docker/broker/global/docker-compose.yml
@@ -1,14 +1,10 @@
 version: '3.5'
 services:
   mosquitto-global:
-    image: eclipse-mosquitto
+    image: brcz1n/eclipse-mqtt-global
     network_mode: bridge
     expose:
        - "8200"
     ports:
       - "8200:8200"
-    volumes:
-      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
-      - ./mosquitto_data:/mosquitto/data
-      - ./mosquitto_log:/mosquitto/log
 
